# HexGame

./: Jenkinsfile  cli.py  pyproject.toml  requirements.txt  to do
ai/: random_ai.py
core/: board.py  dsu.py  engine.py  players.py  registry.py
games/: 00185f.json  0496c7.json  04a1ad.json  0c756c.json  0cf5dc.json  111cac.json  1128fa.json  115286.json  118c7e.json  15480f.json  157d99.json  158dc7.json  190784.json  19fd71.json  1b1960.json  1b2dd1.json  1bc869.json  1bded2.json  20294b.json  212a3c.json  23b856.json  28e310.json  292901.json  2bc565.json  2d0800.json  2d5c0c.json  2e7a1a.json  3044ae.json  31b355.json  31bb56.json  336211.json  338463.json  35dd4d.json  36f75a.json  36fc7a.json  38af41.json  3ace89.json  3af61c.json  3cd033.json  3cdbac.json  (+132 more)
hex/: board.py  engine.py  players.py  unionfind.py
recordings/: hex_test_1.side
tests/: conftest.py  helpers.py  test_online_hex.py
ui/: board_widget.py  cli.py  main.py  qt.py  window.py
web/: app.py  routes.py
web/static/: board.css  board.js
web/templates/: index.html
web_tests/: conftest.py  test_ai.py  test_rules.py
